# canfd-offset-optimizer

./: .gitignore  LICENSE  README.md  clean_pycache.cmd  create_project.cmd  create_project.ps1  pyproject.toml
docs/: 01_research_and_design.md  02_project_structure_and_code_conventions.md  03_implementation_plan.md  AGNETS.md  PySide6 GUI 前置架构与实施计划.md  gui_architecture_plan.md  gui_backend_contract.md  gui_real_backend_root_cause_report.md  gui_user_guide.md  一种离散时隙上的周期报文Offset均衡分配方法.tex
input/config/: project.yaml
packaging/: CANFDOffsetOptimizer.spec  README_运行说明.txt  gui_entry.py
scripts/: build_gui_exe.cmd  clean_pycache.cmd  create_project.cmd  create_project.ps1  start_gui.cmd
src/canfd_offset_optimizer/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/canfd_offset_optimizer/diagnostics/: __init__.py  candidate_pool_study.py  cpsat_verify.py  restart_study.py  tolerance_study.py  triple_ablation.py
src/canfd_offset_optimizer/gui/: __init__.py  __main__.py  app.py  artifact_outputs.py  backend.py  state.py  (+19 more)
tests/fixtures/: ALL_offsets_weight_mode_comparison.csv
tests/gui/: conftest.py  test_app.py  test_architecture_boundary.py  test_contracts.py  test_dbc_offset_writer.py  test_exports.py  test_fixture_backend.py  test_gui_state.py  test_input_panel.py  test_load_chart_display.py  test_load_heatmap.py  test_main_window.py  test_mock_backend.py  test_network_identity_binding.py  test_output_paths.py  test_quick_start_page.py  test_real_backend_truthfulness.py  test_routing_exclusion.py  test_sender_selection.py  test_settings_panel.py  test_theme.py  test_validation.py  test_view_models.py  test_worker_lifecycle.py
tests/integration/: test_end_to_end.py
tests/unit/: test_arxml_parser.py  test_comparison.py  test_config.py  test_dbc_parser.py  test_diagnostics.py  test_frame_time.py  test_greedy.py  test_local_search.py  test_models.py  test_objective.py  test_offset_search_config.py  test_project_loader.py  test_random_properties.py  test_regressions.py  test_report_filenames.py  test_restart_audit.py  test_slot_map.py  test_state.py  test_triple_search.py
(+43 files in other folders)
