[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "canfd-offset-optimizer"
version = "0.1.0"
description = "Periodic CAN FD message Offset balancing with GCLS."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "篠見由紀" }]
dependencies = [
  "cantools>=40",
  "lxml>=5",
  "PyYAML>=6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
canfd-offset = "canfd_offset_optimizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canfd_offset_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["canfd_offset_optimizer"]
mypy_path = "src"
